# Hand_and_Gesture_detector

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: app.hpp  camera.hpp  gesture_classifier.hpp  gesture_types.hpp  hand_detector.hpp  light_controller.hpp  logger.hpp
src/: app.cpp  camera.cpp  gesture_classifier.cpp  hand_detector.cpp  light_controller.cpp  main.cpp
